syntax = "proto3";
package shareledger.gentlemint;

option go_package = "github.com/sharering/shareledger/x/gentlemint/types";



message LevelFee {
  string level = 1; 
  string fee = 2; 
  string creator = 3;
}

