syntax = "proto3";

package shareledger.gentlemint;

import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";
import "shareledger/gentlemint/action_level_fee.proto";
import "shareledger/gentlemint/exchange_rate.proto";
import "shareledger/gentlemint/level_fee.proto";

option go_package = "github.com/sharering/shareledger/x/gentlemint/types";

// GenesisState defines the gentlemint module's genesis state.
message GenesisState {
  ExchangeRate exchangeRate = 1;
  repeated LevelFee levelFeeList = 2 [(gogoproto.nullable) = false];
  repeated ActionLevelFee actionLevelFeeList = 3 [(gogoproto.nullable) = false];
  Params params = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params,omitempty"
  ];
  // this line is used by starport scaffolding # genesis/proto/state
}

// Params defines the set of module parameters.
message Params {
  // Minimum stores the minimum gas price(s) for all TX on the chain.
  // When multiple coins are defined then they are accepted alternatively.
  // The list must be sorted by denoms asc. No duplicate denoms or zero amount
  // values allowed. For more information see
  // https://docs.cosmos.network/main/modules/auth#concepts
  repeated cosmos.base.v1beta1.DecCoin minimum_gas_prices = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "minimum_gas_prices,omitempty",
    (gogoproto.moretags) = "yaml:\"minimum_gas_prices\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"
  ];
}
